<resources>
    <string name="app_name">PlantDiagnosisSystem</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">New to Plant Diagnosis System? Sign Up</string>
    <string name="get_verification_code">Get Verification Code</string>
    <string name="title_activity_configurations">Configurations</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!--Strings used for ForgetPassword-->
    <string name="title_activity_recover_password">RecoverPassword</string>
    <!--Strings used for SignUpActivity-->
    <string name="email">Email</string>
    <string name="password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <!-- Strings used for fragments for navigation -->
    <string name="recover_fragment_label">Recover Password</string>
    <string name="reset_fragment_label">Reset Password</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_take_picture">Take Picture</string>
    <string name="already_registered">Already Registered?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
